css/styles.css
/* ... */
.checkbox-tic label::after {
  filter: alpha(opacity=0);
  opacity: 0;
  content: '';
  position: absolute;
  width: 9px;
  height: 5px;
  background: transparent;
  top: 4px;
  left: 4px;
  border: 3px solid #ccc;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

button {
  background: #fff;
  border: 1px solid #e0e0e0;
  box-shadow: none;
  color: #666;
  text-align: center;
  font-size: 12px;
  font-size: 0.75rem;
  font-weight: bold;
  margin: auto;
  padding: 0.43077rem 1.23077rem 0.30769rem;
  width: 40%;
  border-radius: 50px 50px 50px 50px;
  text-align: center;
}

.phone button {
  width: 60%;
}

.centered {
  margin: 10px;
  text-align: center;
}

.checkbox-setting {
  text-align: left;
  height: 40px;
  padding: 4px;
}

.checkbox-setting-s {
  text-align: left;
  height: 40px;
  padding: 4px;
  overflow: auto;
}


.checkbox-label {
  float: left;
  text-align: left;
}

.checkbox-label-s {
  float: left;
  text-align: left;
}

.checkbox-setting span{
  padding-left: 10px;
  padding-top: 15px;
}

.plugin-name {
  margin-right: 15px;
  padding-right: 15px;
  padding-top: 4px;
}

.course-ico {
 float: left;
 padding-right: 4px;
}

.plugin-ico {
 float: left;
 padding-right: 4px;
}

.arrow-box-contents {
  width: 100%;
  padding-right: 10px;
  word-wrap: break-word;
}

